@@ -114,7 +114,7 @@ Module::CoreList                               = 0
 Module::Which                                  = 0
 Mojo::JSON::Any                                = 0
 Mojolicious                                    = 4.29
-Mojolicious::Plugin::RenderFile                = 0
+;Mojolicious::Plugin::RenderFile                = 0
 Mojolicious::Plugin::SslAuth                   = 0
 ;Mojolicious::Plugin::Gravatar                 = 0
 Moose                                          = 0
