@@ -58,7 +58,6 @@ Module::Which
 Mojo::JSON::Any
 Mojolicious
 Mojolicious::Plugin::Ident
-Mojolicious::Plugin::RenderFile
 Mojolicious::Plugin::SslAuth
 Mojolicious::Plugin::TtRenderer
 Moose
