@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - rm Mojolicious::Plugin::RenderFile
 
 0.69      2013-12-30 15:11:31 -0500
   - rm App::cpangitify on MSWin32 only
